alpha-codegen/tests/snapshots/scheduledc_snapshots__dependence_read_identity_schedule.snap
---
source: alpha-codegen/tests/scheduledc_snapshots.rs
expression: identity
---
// Evaluate every statement, in schedule order.
	long c0;
	for (c0 = 0; c0 < N; c0 += 1) {
		{
			long i = c0;
			Y(i) = X(i);
		}
	}
