alpha-codegen/tests/snapshots/scheduledc_snapshots__dependence_read_reversed_schedule.snap
---
source: alpha-codegen/tests/scheduledc_snapshots.rs
expression: reversed
---
// Evaluate every statement, in schedule order.
	long c0;
	for (c0 = 0; c0 < N; c0 += 1) {
		{
			long i = N - c0 - 1;
			Y(i) = X(i);
		}
	}
