alpha-codegen/tests/snapshots/scheduledc_snapshots__nested_reduce_dependency_illegal_interleaved_schedule.snap
---
source: alpha-codegen/tests/scheduledc_snapshots.rs
expression: err
---
illegal schedule: 'Z__reduce' reads 'Y__reduce' but the schedule doesn't guarantee the producer instance runs strictly before the consumer instance that reads it (§7.2)
