alpha-codegen/tests/snapshots/scheduledc_snapshots__piecewise_equation_identity_schedule.snap
---
source: alpha-codegen/tests/scheduledc_snapshots.rs
expression: extract_driver_body(&code).to_string()
---
// Evaluate every statement, in schedule order.
	long c0;
	for (c0 = 0; c0 < N; c0 += 1) {
		{
			long i = c0;
			Y(i) = (N >= 11) ? (X(i)) : (((X(i)) + (X(i))));
		}
	}
