alpha-codegen/tests/snapshots/scheduledc_snapshots__prefix_sum_full_generated_file.snap
---
source: alpha-codegen/tests/scheduledc_snapshots.rs
expression: code
---
// This code was auto-generated by alphac (alpha-rs).
// ScheduledC backend — a user-supplied target mapping controls loop order.

#include <float.h>
#include <limits.h>
#include <math.h>
#include <stdbool.h>
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

// Function Macros
#define ceild(n,d) ((int)ceil(((double)(n))/((double)(d))))
#define floord(n,d) ((int)floor(((double)(n))/((double)(d))))
#define div(a,b) (ceild((a),(b)))
#define max(a,b) (((a)>(b))?(a):(b))
#define min(a,b) (((a)<(b))?(a):(b))
#define mallocCheck(v,s) if ((v) == NULL) { printf("Failed to allocate memory for variable: %s\n", (s)); exit(-1); }

// Global Variables
static long N;
static float* X;
static float* Y;

// Memory Macros
#define X(i0) X[i0]
#define Y(i0) Y[i0]

// Function Declarations
void PrefixSum(long _local_N, float* _local_X, float* _local_Y);

void PrefixSum(long _local_N, float* _local_X, float* _local_Y) {
	N = _local_N;
	X = _local_X;
	Y = _local_Y;

	// Allocate memory for local storage.

	// Evaluate every statement, in schedule order.
	long c0;
	long c2;
	for (c0 = 0; c0 < N; c0 += 1) {
		{
			long i = c0;
			Y(i) = 0.0f;
		}
		for (c2 = 0; c2 <= c0; c2 += 1) {
			{
				long i = c0;
				long j = c2;
				Y(i) = (Y(i)) + (X(j));
			}
		}
	}

	// Free all allocated memory.
}


// Undefine the Memory and Function Macros
#undef X
#undef Y
#undef ceild
#undef floord
#undef div
#undef max
#undef min
#undef mallocCheck
